[package]
name = "rwatch"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
futures = "0.3.31"
pretty-duration = "0.1.1"
regex = "1.12.2"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
